frontend/test/should_fail/defYield_003.grg
using defYield;

test t
{
	def x:B;
	pp:p(yield x);
}

pattern p(def x:A)
{
	y:A;
	yield { yield x = y; }
}

